--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,5 @@
 == README
-
+{<img src="https://travis-ci.org/WhiteHatED/hprobotics.svg?branch=master" alt="Build Status" />}[https://travis-ci.org/WhiteHatED/hprobotics]{<img src="https://codeclimate.com/github/WhiteHatED/hprobotics/badges/gpa.svg" />}[https://codeclimate.com/github/WhiteHatED/hprobotics]{<img src="https://codeclimate.com/github/WhiteHatED/hprobotics/badges/coverage.svg" />}[https://codeclimate.com/github/WhiteHatED/hprobotics]
 This README would normally document whatever steps are necessary to get the
 application up and running.
 
